               upgrading or manually in the config file see https://arkime.com/settings#parliament
               and https://arkime.com/faq#how_do_i_upgrade_to_arkime_5
  - BREAKING - WISE/tagger must now use http.request.FIELD/http.response.FIELD
               when referencing header defined with headers-http-request/headers-http-response
  - release - zstd 1.5.5, nghttp2 1.57.0, maxmind 1.7.1, yara 4.2.3
  - release - node v18.18.2 - Centos 7, Ubuntu 18, Alpine use unofficial builds
  - release - support building on alpine
  - all - all programs support same config file formats (ini/json/yaml) and
          retrieval (file, elasticsearch)
  - all - json/yaml config file formats now allow arrays instead of comma/semi separated
  - all - authMode setting added
  - all - authMode=basic added
  - all - notifiers for parliament and arkime merged
          conflicts mitigated by appending "Parliament" to parliament notifiers
  - all - drop privileges is now AFTER http(s) list
  - capture - moloch converted to arkime
  - capture - override ips can now set any field
  - capture - overrideIpsFiles setting
  - capture - packetDropIpsFiles setting
  - capture - can have negative cert.validDays/cert.remainingDays (thanks mcgillowen)
  - capture - added cert.remainingSeconds/cert.remainingSeconds (thanks mcgillowen)
  - capture - cert.remainingDays is now based on the firstPacket of session
              instead of current time (thanks mcgillowen)
  - capture - JA4 support
  - capture - JA3/JA4 support for smtp STARTTLS
  - capture - always build zstd (except arch)
  - cont3xt - new bulk UI and support for bulk queries
  - cont3xt - lots of keyboard shortcut improvements
  - cont3xt - new array syntax for links substitution
  - cont3xt - new OpenSearch/Elasticsearch integration (config file only)
  - cont3xt - new viewRoles in config file per integration to control access
  - cont3xt - transfer ownership of resources
  - cont3xt - new csv/json data source supports