@@ -7,11 +7,10 @@ yum -y update; \
 yum -y install centos-release-scl scl-utils centos-release-scl-rh wget; \
 yum -y update; \
 yum -y install git sudo perl-Test-Base perl-Test-Differences perl-Test-Simple bzip2 wget rh-ruby26-ruby-devel rh-ruby26-ruby rpm-build pango which; \
-(cd /etc/yum.repos.d/; wget https://packages.ntop.org/centos-stable/ntop.repo); \
 yum -y update; \
-yum -y install devtoolset-9-gcc-c++ pfring rh-python36; \
+yum -y install devtoolset-9-gcc-c++ rh-python36; \
 git clone https://github.com/arkime/arkime; \
-(cd arkime; git checkout $ARKIME_BRANCH; scl enable devtoolset-9 rh-python36 './easybutton-build.sh --daq --pfring --kafka'); \
+(cd arkime; git checkout $ARKIME_BRANCH; scl enable devtoolset-9 rh-python36 './easybutton-build.sh --daq --kafka'); \
 mv arkime/thirdparty /; \
 rm -rf /thirdparty/glib*/*/tests /thirdparty/glib*/*/*/tests && \
 rm -rf arkime; \
